Pre-Image, Yelp Api Complete

--- a/Eatrition/app/build.gradle
+++ b/Eatrition/app/build.gradle
@@ -33,4 +33,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+
+    //MYSTUFF HERE
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    //MYSTUFF HERE
 }
