--- a/Eatrition/app/build.gradle
+++ b/Eatrition/app/build.gradle
@@ -37,5 +37,6 @@ dependencies {
     //MYSTUFF HERE
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
     //MYSTUFF HERE
 }
